<!--
  ~ Copyright 2016 Todd Burgess Media
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="Select Time Frame"
        android:orderInCategory="200"
        android:id="@+id/whatshot_timeframe"
        app:showAsAction="always"
        android:icon="@drawable/ic_clock"
        />

    <item
        android:orderInCategory="0"
        android:id="@+id/whats_hot_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/whats_hot_faq"
        android:title="@string/whats_hot_faq"
        android:orderInCategory="500" />

    <item
        android:id="@+id/whats_hot_preferences"
        android:title="Preferences"
        android:orderInCategory="400" />

    <item
        android:id="@+id/whats_hot_privacy"
        android:title="Privacy Policy"
        android:orderInCategory="300" />



</menu>