...
        android:paddingBottom="14dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Got it"
        android:layout_gravity="center"
        android:id="@+id/privacy_gotit"
        />

</LinearLayout>

