...
    <string name="nothing_dialog_body">Your search term found nothing</string>
    <string name="show_all_time">Show All Time</string>
    <string name="show_today">Show Today</string>
    <string name="show_this_month">Show This Month</string>
    <string name="show_since_yesterday">Show Since Yesterday</string>
    <string name="show_this_year">Show This Year</string>
    <string name="refresh">Refresh</string>
    <string name="nothing_ok_button">OK</string>
    <string name="no_github_desc">No description available</string>

    <string name="questions_time_frame">Time Frame: </string>

    <string name="whats_hot_faq">FAQ</string>
...
    <string name="github_searchterm">Search Term: </string>

    <string name="time_dialog_title">Select Time Period</string>
    <string-array name="time_dialog">
        <item>All Time</item>
        <item>This Year</item>
        <item>This Month</item>
        <item>Since Yesterday</item>
        <item>Today</item>
    </string-array>

    <string name="site_select_title">Select Site</string>
    <string name="github_menu_meetup">Meetup</string>
...
